--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="/demoapp/Adwait"><button>click here</button></a>
+    <a href="/Adwait"><button>click here</button></a>
 </body>
 </html>
